<resources>
    <string name="google_place_api">AIzaSyAzRAfojfGxTcV8D0ERZRx1CKDoaVzQn1A</string>

    <string name="app_name">APDS</string>
    <string name="temperature">Temperature</string>
    <string name="fahrenheit">fahrenheit</string>
    <string name="humidity">Humidity</string>
    <string name="ppm">PPM</string>
    <string name="carbon_dioxide">Carbon Dioxide</string>
    <string name="air_pressure">Air Pressure</string>
    <string name="hpa">hPa</string>
    <string name="carbon_monoxide">Carbon Monoxide</string>
    <string name="ppb">PPB</string>
    <string name="ozone">Ozone</string>
    <string name="the_air_in_the_home_is_top_shape_breathe_freely_and_enjoy_every_breath_you_are_safe">The air in the home is top shape. Breathe freely and enjoy every breath. You are safe.</string>
    <string name="you_will_recieve_verification_code_few_seconds">You will recieve verification code in few seconds</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="wrong_sensor_id">Wrong sensor ID</string>
    <string name="successfully_changed">Succesfully changed</string>
    <string name="wrong_msisdn">Wrong phone number entered</string>

    <string name="something_goes_wrong">Something goes wrong</string>
    <string name="you_will_be_notified_when_measured_data_is_in_below_max_value_or_above_min_value">You will be notified when measured data is in below max value or above min value.</string>
    <string name="you_will_revieve_a_call_or_sms_when_measured_data_is_in_below_max_value_or_above_min_value">You will receive a call or sms when measured data is in below max value or above min value.</string>
    <string name="please_enter_a_sensor_id">Please, enter a sensor id</string>
    <string name="lpg">LPG</string>
    <string name="methane">Methane</string>
    <string name="hydrogen">Hydrogen</string>
    <string name="smoke">Smoke</string>
    <string name="no_any_sensor_found">No any Sensor found</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

</resources>
