<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
     android:layout_width="match_parent">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/overall"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@color/excellentConditionColor">


        <FrameLayout

            android:id="@+id/graph_lyt"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/border_oval_view_green"
                />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_line_chart" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginTop="20dp"
            android:id="@+id/rl"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/white_oval"
            android:layout_centerHorizontal="true"
            >
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/quality_background">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="36sp"
                    android:text="98"
                    android:textColor="@color/excellentConditionColor"
                    android:layout_gravity="center"/>
            </FrameLayout>
        </FrameLayout>


        <TextView
            android:id="@+id/condition_txt"
            android:layout_below="@id/rl"
            android:layout_marginTop="0dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:text="Excellent"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/first_lyt"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/overall">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/view1">

            <RelativeLayout
                android:id="@+id/rl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/temperature_icon">

                <TextView
                    android:id="@+id/temperature_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="@string/temperature"
                    android:textAllCaps="true"
                    android:textColor="@color/sensorNameColor"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/fahrenheit_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/temperature_txt"
                    android:layout_marginLeft="1dp"
                    android:text="@string/temperature"
                    android:textColor="@color/sensorTypeColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/degree_temperature_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fahrenheit_txt"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="3dp"
                    android:text="84"
                    android:textColor="@color/badConditionColor"
                    android:textSize="21sp" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/temperature_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="8dp"
                app:srcCompat="@drawable/ic_temperature" />
        </RelativeLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="1.2dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@color/deviderColor" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/view1">

            <RelativeLayout
                android:id="@+id/rl2"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/humidity_icon">

                <TextView
                    android:id="@+id/humidity_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="@string/humidity"
                    android:textAllCaps="true"
                    android:textColor="@color/sensorNameColor"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/percent_humidity_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/humidity_txt"
                    android:layout_marginLeft="1dp"
                    android:text="Percent"
                    android:textColor="@color/sensorTypeColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/degree_humidity_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/percent_humidity_txt"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="3dp"
                    android:text="50"
                    android:textColor="@color/excellentConditionColor"
                    android:textSize="21sp" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/humidity_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_humidity" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/horizontal1"
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:layout_below="@+id/first_lyt"
        android:background="@color/deviderColor" />

    <RelativeLayout
        android:id="@+id/second_lyt"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/horizontal1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/view2">

            <RelativeLayout
                android:id="@+id/rl3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/carbon_icon">

                <TextView
                    android:id="@+id/carbon_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="@string/carbon_dioxide"


                    android:textAllCaps="true"
                    android:textColor="@color/sensorNameColor"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/ppm_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/carbon_txt"
                    android:layout_marginLeft="1dp"
                    android:text="@string/ppm"
                    android:textColor="@color/sensorTypeColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/degree_ppm_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ppm_txt"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="3dp"
                    android:text="497"
                    android:textColor="@color/excellentConditionColor"
                    android:textSize="21sp" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/carbon_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_carbon" />
        </RelativeLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="1.2dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@color/deviderColor" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/view2">

            <RelativeLayout
                android:id="@+id/rl4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/air_pressure_icon">

                <TextView
                    android:id="@+id/air_pressure_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="@string/air_pressure"
                    android:textAllCaps="true"
                    android:textColor="@color/sensorNameColor"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/hpa_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/air_pressure_txt"
                    android:layout_marginLeft="1dp"
                    android:text="@string/hpa"
                    android:textColor="@color/sensorTypeColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/degree_hpa_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hpa_txt"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="3dp"
                    android:text="1024"
                    android:textColor="@color/excellentConditionColor"
                    android:textSize="21sp" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/air_pressure_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_pressure" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/horizontal2"
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:layout_below="@+id/second_lyt"
        android:background="@color/deviderColor" />

    <RelativeLayout
        android:id="@+id/third_lyt"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_below="@+id/horizontal2">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignRight="@+id/view3">

            <RelativeLayout
                android:id="@+id/rl5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/carbon_monoxide_icon">

                <TextView
                    android:id="@+id/carbon_monoxide_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="@string/carbon_monoxide"


                    android:textAllCaps="true"
                    android:textColor="@color/sensorNameColor"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/ppm_carbon_monoxide_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/carbon_monoxide_txt"
                    android:layout_marginLeft="1dp"
                    android:text="@string/ppm"
                    android:textColor="@color/sensorTypeColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/degree_ppm_carbon_monoxide_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ppm_carbon_monoxide_txt"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="3dp"
                    android:text="40"
                    android:textColor="@color/badConditionColor"
                    android:textSize="21sp" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/carbon_monoxide_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_carbon_monoxide" />
        </RelativeLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="1.2dp"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:background="@color/deviderColor" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/view3">

            <RelativeLayout
                android:id="@+id/rl6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="20dp"
                android:layout_toRightOf="@+id/ozone_icon">

                <TextView
                    android:id="@+id/ozone_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:text="@string/ozone"
                    android:textAllCaps="true"
                    android:textColor="@color/sensorNameColor"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/ppb_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ozone_txt"
                    android:layout_marginLeft="1dp"
                    android:text="@string/ppb"
                    android:textColor="@color/sensorTypeColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/degree_ppb_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ppb_txt"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="3dp"
                    android:text="4"
                    android:textColor="@color/excellentConditionColor"
                    android:textSize="21sp" />


            </RelativeLayout>

            <ImageView
                android:id="@+id/ozone_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_ozone" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/horizontal3"
        android:layout_width="match_parent"
        android:layout_height="1.2dp"
        android:layout_below="@+id/third_lyt"
        android:background="@color/deviderColor" />
</RelativeLayout>
</ScrollView>